--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/label.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/label.scss
@@ -45,6 +45,7 @@
 
 .label--draft {
   background-color: lighten($color-clear, 40%);
+  width: fit-content;
 }
 
 .label__icon {
